# noise_vocoder_legendary-goggles

./: .gitignore  AGENTS.md  LICENSE  README.md  audio.py  plot.py  pyproject.toml  requirements.txt  signal_processing.py  test_vocoder.py  vocoder.py
.githooks/: pre-commit
config/: default_6_bands.json  default_6_bands_sine.json  default_8_bands_sine.json  legacy_4_bands.json  single_speaker_default_6_bands.json  single_speaker_default_6_bands_sine.json  single_speaker_default_8_bands_sine.json  speech_weighted_8_bands.json
doc/: failure_log_bug.txt  multiprocessing_stall_recommendations.md
scripts/: batch_vocode.sbatch  find_empty_wavs.sh  find_missing_vocoded_wavs.sh  find_missing_wavs.sh  output_progress_monitor.sh  run_filename_list_vocode.sh  run_fix_legacy_missing_vocode.sh  run_repair_vocode.sh  run_snellius_vocode.sh  sbatch_default_16_band.sh  sbatch_default_4_band.sh  sbatch_default_6_band.sh  sbatch_default_8_band.sh  sbatch_filename_list_vocode_job.sh  sbatch_find_empty_wavs.sh  sbatch_fix_legacy_missing_vocode_job.sh  sbatch_repair_vocode_job.sh  sbatch_speech_weighted_8_band.sh  sbatch_tar_wav_folder.sh  sbatch_vocode_job.sh  snellius_jobs.sh  submit_default_16_band.sh  submit_default_4_band.sh  submit_default_6_band.sh  submit_default_8_band.sh  submit_filename_list_vocode_job.sh  submit_fix_legacy_missing_vocode_job.sh  submit_repair_vocode_job.sh  submit_snellius_job.sh  submit_speech_weighted_8_band.sh  submit_vocode_job.sh
tests/: tester.py
vocoder/: __init__.py  __main__.py  audio.py  batch.py  core.py  file_io.py  frequency_bands.json  (+4 more)
(+11 files in other folders)
