[build-system]
requires = ['setuptools>=68', 'wheel']
build-backend = 'setuptools.build_meta'

[project]
name = 'vocoder'
version = '0.1.48'
description = 'Noise vocoder utilities for loading, vocoding, plotting, and writing speech audio.'
readme = 'README.md'
requires-python = '>=3.10'
license = {file = 'LICENSE'}
authors = [
    {name = 'Martijn Bentum'},
]
dependencies = [
    'librosa>=0.11',
    'matplotlib>=3.10',
    'numpy>=2.1',
    'scipy>=1.15',
    'soundfile>=0.13',
]

[project.optional-dependencies]
audio = [
    'sounddevice>=0.5',
]

[project.scripts]
vocoder = 'vocoder.core:main'

[tool.setuptools.packages.find]
include = ['vocoder']
